--- a/plugins/sociallogin/facebook/language/en-GB/en-GB.plg_sociallogin_facebook.ini
+++ b/plugins/sociallogin/facebook/language/en-GB/en-GB.plg_sociallogin_facebook.ini
@@ -4,3 +4,24 @@
 
 PLG_SOCIALLOGIN_FACEBOOK="Akeeba Social Login - Facebook integration"
 PLG_SOCIALLOGIN_FACEBOOK_DESCRIPTION="Allows social login with Facebook accounts."
+
+PLG_SOCIALLOGIN_FACEBOOK_LBLDISPLAYEDAS="Facebook"
+PLG_SOCIALLOGIN_FACEBOOK_SHORTINFO="Links your user on this site with your Facebook account"
+
+PLG_SOCIALLOGIN_FACEBOOK_FIELD_APPID_LABEL="Facebook Application ID"
+PLG_SOCIALLOGIN_FACEBOOK_FIELD_APPID_DESC="Enter the App ID for your custom Facebook application here. This is required to enable social login with Facebook. You can create a Facebook app at https://developers.facebook.com/apps"
+
+PLG_SOCIALLOGIN_FACEBOOK_FIELD_APPSECRET_LABEL="Facebook Application Secret"
+PLG_SOCIALLOGIN_FACEBOOK_FIELD_APPSECRET_DESC="Enter the App Secret for your custom Facebook application here. This is required to enable social login with Facebook. You can create a Facebook app at https://developers.facebook.com/apps."
+
+PLG_SOCIALLOGIN_FACEBOOK_FIELD_CREATENEW_LABEL="Create new user accounts?"
+PLG_SOCIALLOGIN_FACEBOOK_FIELD_CREATENEW_DESC="Creates a new Joomla! user when a user tries to log in via Facebook but there is no Joomla! user account associated with that email or Facebook User ID. If user registration is disabled no account will be created and an error will be raised. The new Joomla! user will have a username derived from the Facebook login, the same email address as the Facebook account and a long, random password (which the user can change once they have logged in). Set this to No to prevent creation of user accounts through Facebook login."
+
+PLG_SOCIALLOGIN_FACEBOOK_ERROR_NOT_LOGGED_IN_FB="You are not logged into Facebook or you didn't grant permissions for this site to log you in through Facebook"
+PLG_SOCIALLOGIN_FACEBOOK_ERROR_ACCOUNT_DISABLED_OR_NOT_ACTIVATED="Your account on this site is disabled or not activated."
+PLG_SOCIALLOGIN_FACEBOOK_ERROR_LOCAL_NOT_FOUND="You do not have an account on this site that corresponds to this Facebook account."
+PLG_SOCIALLOGIN_FACEBOOK_ERROR_LOCAL_USERNAME_CONFLICT="An account with the same username as your Facebook account already exists on this site. Please log in to your account on this site and then link your Facebook account to it. If you do not have a user account yet please create one first."
+PLG_SOCIALLOGIN_FACEBOOK_ERROR_CANNOT_CREATE="Could not create a new user on our site: %s"
+
+PLG_SOCIALLOGIN_FACEBOOK_NOTICE_USERACTIVATE="Your email address needs to be verified before logging in to this site. An email has been sent to you with instructions. After following these instructions please come back here and retry logging in to this site using Facebook."
+PLG_SOCIALLOGIN_FACEBOOK_NOTICE_ADMINACTIVATE="Your account needs to be reviewed by an administrator. When the review process is complete you will receive a confirmation email. After receiving that email please come back here and retry logging in to this site using Facebook."
