This is going to be a plugins-only solution

--- a/plugins/system/sociallogin/language/en-GB/en-GB.plg_system_sociallogin.sys.ini
+++ b/plugins/system/sociallogin/language/en-GB/en-GB.plg_system_sociallogin.sys.ini
@@ -2,7 +2,5 @@
 ;; Copyright (C) 2016-2017  Akeeba Ltd
 ;; Licensed under the terms of the GNU General Public License v3 or later
 
-SOCIALLOGIN="Akeeba Social Login"
-COM_SOCIALLOGIN="Akeeba Social Login"
-
-COM_SOCIALLOGIN_CONFIGURATION="Akeeba Social Login: Options"
+PLG_SYSTEM_SOCIALLOGIN="System - Akeeba Social Login"
+PLG_SYSTEM_SOCIALLOGIN_DESCRIPTION="Allows users to link their accounts to their social media profiles."
