--- a/plugins/system/sociallogin/language/en-GB/en-GB.plg_system_sociallogin.sys.ini
+++ b/plugins/system/sociallogin/language/en-GB/en-GB.plg_system_sociallogin.sys.ini
@@ -3,4 +3,10 @@
 ;; Licensed under the terms of the GNU General Public License v3 or later
 
 PLG_SYSTEM_SOCIALLOGIN="System - Akeeba Social Login"
-PLG_SYSTEM_SOCIALLOGIN_DESCRIPTION="Allows users to link their accounts to their social media profiles."
+PLG_SYSTEM_SOCIALLOGIN_DESCRIPTION="Displays the social login buttons. Use the placeholder `{socialloginbuttons}` in your template overrides and activate this plugin to display the buttons. Alternatively, use the options to tell this plugin where it should auto-append the social login buttons."
+
+PLG_SYSTEM_SOCIALLOGIN_CONFIG_LOGINMODULES_LABEL="Login Modules' Names"
+PLG_SYSTEM_SOCIALLOGIN_CONFIG_LOGINMODULES_DESC="Enter the comma separated list of namen of modules to append the social buttons automatically, e.g. `mod_login, mod_ajaxlogin`. Set this to `none` to prevent this behavior. In this case you must make template overrides and use the `{socialloginbuttons}` placeholder."
+
+PLG_SYSTEM_SOCIALLOGIN_CONFIG_INTERCEPTLOGIN_LABEL="Add buttons to login page"
+PLG_SYSTEM_SOCIALLOGIN_CONFIG_INTERCEPTLOGIN_DESC="When enabled the plugin will automatically append the social login buttons to the end of the login page created by Joomla's com_users. Otherwise you must make template overrides and use the `{socialloginbuttons}` placeholder."
