Use com_ajax for unlinking accounts

--- a/plugins/sociallogin/facebook/language/en-GB/en-GB.plg_sociallogin_facebook.ini
+++ b/plugins/sociallogin/facebook/language/en-GB/en-GB.plg_sociallogin_facebook.ini
@@ -8,6 +8,9 @@ PLG_SOCIALLOGIN_FACEBOOK_DESCRIPTION="Allows social login with Facebook accounts
 PLG_SOCIALLOGIN_FACEBOOK_LBLDISPLAYEDAS="Facebook"
 PLG_SOCIALLOGIN_FACEBOOK_SHORTINFO="Links your user on this site with your Facebook account"
 
+PLG_SOCIALLOGIN_FACEBOOK_UNLINK_LABEL="Unlink Facebook"
+PLG_SOCIALLOGIN_FACEBOOK_UNLINK_DESC="Unlinks your user on this site from your Facebook account"
+
 PLG_SOCIALLOGIN_FACEBOOK_FIELD_APPID_LABEL="Facebook Application ID"
 PLG_SOCIALLOGIN_FACEBOOK_FIELD_APPID_DESC="Enter the App ID for your custom Facebook application here. This is required to enable social login with Facebook. You can create a Facebook app at https://developers.facebook.com/apps"
 
