--- a/plugins/system/sociallogin/language/en-GB/en-GB.plg_system_sociallogin.ini
+++ b/plugins/system/sociallogin/language/en-GB/en-GB.plg_system_sociallogin.ini
@@ -4,3 +4,7 @@
 
 PLG_SYSTEM_SOCIALLOGIN="System - Akeeba Social Login"
 PLG_SYSTEM_SOCIALLOGIN_DESCRIPTION="Allows users to link their accounts to their social media profiles."
+
+PLG_SYSTEM_SOCIALLOGIN_ERR_AJAX_INVALIDACTION="Invalid Social Login action"
+PLG_SYSTEM_SOCIALLOGIN_ERR_AJAX_INVALIDSLUG="Invalid Social Login slug"
+PLG_SYSTEM_SOCIALLOGIN_ERR_AJAX_INVALIDUSER="Invalid user ID"
