Move user plugin logic into the system plugin

--- a/plugins/system/sociallogin/language/en-GB/en-GB.plg_system_sociallogin.ini
+++ b/plugins/system/sociallogin/language/en-GB/en-GB.plg_system_sociallogin.ini
@@ -8,3 +8,9 @@ PLG_SYSTEM_SOCIALLOGIN_DESCRIPTION="Allows users to link their accounts to their
 PLG_SYSTEM_SOCIALLOGIN_ERR_AJAX_INVALIDACTION="Invalid Social Login action"
 PLG_SYSTEM_SOCIALLOGIN_ERR_AJAX_INVALIDSLUG="Invalid Social Login slug"
 PLG_SYSTEM_SOCIALLOGIN_ERR_AJAX_INVALIDUSER="Invalid user ID"
+
+PLG_SYSTEM_SOCIALLOGIN_ERR_NOUSER="Cannot configure social login for non-existent user."
+
+PLG_SYSTEM_SOCIALLOGIN_HEADER="Social Login"
+PLG_SYSTEM_SOCIALLOGIN_FIELD_LABEL="Social Login setup"
+PLG_SYSTEM_SOCIALLOGIN_FIELD_DESC="Set up social login to log in to our site more easily. WARNING! Modifying your social login settings will lose any other changes you've made in your user account settings."
