Link / unlink buttons

--- a/plugins/system/sociallogin/language/en-GB/en-GB.plg_system_sociallogin.sys.ini
+++ b/plugins/system/sociallogin/language/en-GB/en-GB.plg_system_sociallogin.sys.ini
@@ -3,10 +3,13 @@
 ;; Licensed under the terms of the GNU General Public License v3 or later
 
 PLG_SYSTEM_SOCIALLOGIN="System - Akeeba Social Login"
-PLG_SYSTEM_SOCIALLOGIN_DESCRIPTION="Displays the social login buttons. Use the placeholder `{socialloginbuttons}` in your template overrides and activate this plugin to display the buttons. Alternatively, use the options to tell this plugin where it should auto-append the social login buttons."
+PLG_SYSTEM_SOCIALLOGIN_DESCRIPTION="Displays the social network login buttons. Use the options to tell this plugin where it should auto-append the social login buttons or use template overrides according to the documentation."
 
 PLG_SYSTEM_SOCIALLOGIN_CONFIG_LOGINMODULES_LABEL="Login Modules' Names"
-PLG_SYSTEM_SOCIALLOGIN_CONFIG_LOGINMODULES_DESC="Enter the comma separated list of namen of modules to append the social buttons automatically, e.g. `mod_login, mod_ajaxlogin`. Set this to `none` to prevent this behavior. In this case you must make template overrides and use the `{socialloginbuttons}` placeholder."
+PLG_SYSTEM_SOCIALLOGIN_CONFIG_LOGINMODULES_DESC="Enter the comma separated list of namen of modules to append the social buttons automatically, e.g. <code>mod_login, mod_ajaxlogin</code>. Set this to <code>none</code> to prevent this behavior. In this case you must make template overrides according to the documentation."
 
 PLG_SYSTEM_SOCIALLOGIN_CONFIG_INTERCEPTLOGIN_LABEL="Add buttons to login page"
-PLG_SYSTEM_SOCIALLOGIN_CONFIG_INTERCEPTLOGIN_DESC="When enabled the plugin will automatically append the social login buttons to the end of the login page created by Joomla's com_users. Otherwise you must make template overrides and use the `{socialloginbuttons}` placeholder."
+PLG_SYSTEM_SOCIALLOGIN_CONFIG_INTERCEPTLOGIN_DESC="When enabled the plugin will automatically append the social login buttons to the end of the login page created by Joomla's com_users. Otherwise you must make template overrides according to the documentation."
+
+PLG_SYSTEM_SOCIALLOGIN_CONFIG_LINKUNLINKBUTTONS_LABEL="Add buttons to user account page"
+PLG_SYSTEM_SOCIALLOGIN_CONFIG_LINKUNLINKBUTTONS_DESC="When enabled the plugin will automatically add a social media section in the Edit User Account page of Joomla's com_users. This lets users link or unlink their account to their social media presence. If disabled you will have to make template overrides according to the documentation."
