--- a/plugins/system/sociallogin/language/en-GB/en-GB.plg_system_sociallogin.ini
+++ b/plugins/system/sociallogin/language/en-GB/en-GB.plg_system_sociallogin.ini
@@ -3,7 +3,7 @@
 ;; Licensed under the terms of the GNU General Public License v3 or later
 
 PLG_SYSTEM_SOCIALLOGIN="System - Akeeba Social Login"
-PLG_SYSTEM_SOCIALLOGIN_DESCRIPTION="Allows users to link their accounts to their social media profiles."
+PLG_SYSTEM_SOCIALLOGIN_DESCRIPTION="Displays the social network login buttons. Use the options to tell this plugin where it should auto-append the social login buttons or use template overrides according to the documentation."
 
 PLG_SYSTEM_SOCIALLOGIN_ERR_AJAX_INVALIDACTION="Invalid Social Login action"
 PLG_SYSTEM_SOCIALLOGIN_ERR_AJAX_INVALIDSLUG="Invalid Social Login slug"
