More Faceboko plugin options

--- a/plugins/sociallogin/facebook/language/en-GB/en-GB.plg_sociallogin_facebook.ini
+++ b/plugins/sociallogin/facebook/language/en-GB/en-GB.plg_sociallogin_facebook.ini
@@ -20,8 +20,15 @@ PLG_SOCIALLOGIN_FACEBOOK_FIELD_APPID_DESC="Enter the App ID for your custom Face
 PLG_SOCIALLOGIN_FACEBOOK_FIELD_APPSECRET_LABEL="Facebook Application Secret"
 PLG_SOCIALLOGIN_FACEBOOK_FIELD_APPSECRET_DESC="Enter the App Secret for your custom Facebook application here. This is required to enable social login with Facebook. You can create a Facebook app at https://developers.facebook.com/apps."
 
-PLG_SOCIALLOGIN_FACEBOOK_FIELD_CREATENEW_LABEL="Create new user accounts?"
+PLG_SOCIALLOGIN_FACEBOOK_FIELD_LOGINUNLINKED_LABEL="Allow social login to non-linked accounts"
+PLG_SOCIALLOGIN_FACEBOOK_FIELD_LOGINUNLINKED_DESC="When enabled allows users to log in despite not having linked their Facebook account to their site user account. Their Facebook account's email address must be the same as the email account they use on your site and it must be verified (Facebook has checked the validity of their email address OR phone number)."
+
+PLG_SOCIALLOGIN_FACEBOOK_FIELD_CREATENEW_LABEL="Create new user accounts"
 PLG_SOCIALLOGIN_FACEBOOK_FIELD_CREATENEW_DESC="Creates a new Joomla! user when a user tries to log in via Facebook but there is no Joomla! user account associated with that email or Facebook User ID. If user registration is disabled no account will be created and an error will be raised. The new Joomla! user will have a username derived from the Facebook login, the same email address as the Facebook account and a long, random password (which the user can change once they have logged in). Set this to No to prevent creation of user accounts through Facebook login."
+
+PLG_SOCIALLOGIN_FACEBOOK_FIELD_BYPASSVALIDATION_LABEL="Bypass user validation for verified Facebook users"
+PLG_SOCIALLOGIN_FACEBOOK_FIELD_BYPASSVALIDATION_DESC="Only applies when creating new user accounts. If the Facebook user trying to login is verified (Facebook has checked the validity of their email address OR phone number) the new user will be created active, without going through the Joomla! user account validation. This means that no account activation email will be sent to the user or the administrators of the Joomla! site."
+
 
 PLG_SOCIALLOGIN_FACEBOOK_ERROR_NOT_LOGGED_IN_FB="You are not logged into Facebook or you didn't grant permissions for this site to log you in through Facebook"
 PLG_SOCIALLOGIN_FACEBOOK_ERROR_ACCOUNT_DISABLED_OR_NOT_ACTIVATED="Your account on this site is disabled or not activated."
