--- a/plugins/sociallogin/facebook/language/en-GB/en-GB.plg_sociallogin_facebook.ini
+++ b/plugins/sociallogin/facebook/language/en-GB/en-GB.plg_sociallogin_facebook.ini
@@ -33,7 +33,7 @@ PLG_SOCIALLOGIN_FACEBOOK_FIELD_BYPASSVALIDATION_DESC="Only applies when creating
 PLG_SOCIALLOGIN_FACEBOOK_ERROR_NOT_LOGGED_IN_FB="You are not logged into Facebook or you didn't grant permissions for this site to log you in through Facebook"
 PLG_SOCIALLOGIN_FACEBOOK_ERROR_ACCOUNT_DISABLED_OR_NOT_ACTIVATED="Your account on this site is disabled or not activated."
 PLG_SOCIALLOGIN_FACEBOOK_ERROR_LOCAL_NOT_FOUND="You do not have an account on this site that corresponds to this Facebook account."
-PLG_SOCIALLOGIN_FACEBOOK_ERROR_LOCAL_USERNAME_CONFLICT="An account with the same username as your Facebook account already exists on this site. Please log in to your account on this site and then link your Facebook account to it. If you do not have a user account yet please create one first."
+PLG_SOCIALLOGIN_FACEBOOK_ERROR_LOCAL_USERNAME_CONFLICT="An account with the same username or email address as your Facebook account already exists on this site. Please log in to your account on this site and then link your Facebook account to it. If you do not remember having a user account yet please create a new one first."
 PLG_SOCIALLOGIN_FACEBOOK_ERROR_CANNOT_CREATE="Could not create a new user on our site: %s"
 
 PLG_SOCIALLOGIN_FACEBOOK_NOTICE_USERACTIVATE="Your email address needs to be verified before logging in to this site. An email has been sent to you with instructions. After following these instructions please come back here and retry logging in to this site using Facebook."
