--- a/plugins/sociallogin/facebook/language/en-GB/en-GB.plg_sociallogin_facebook.ini
+++ b/plugins/sociallogin/facebook/language/en-GB/en-GB.plg_sociallogin_facebook.ini
@@ -26,9 +26,11 @@ PLG_SOCIALLOGIN_FACEBOOK_FIELD_LOGINUNLINKED_DESC="When enabled allows users to 
 PLG_SOCIALLOGIN_FACEBOOK_FIELD_CREATENEW_LABEL="Create new user accounts"
 PLG_SOCIALLOGIN_FACEBOOK_FIELD_CREATENEW_DESC="Creates a new Joomla! user when a user tries to log in via Facebook but there is no Joomla! user account associated with that email or Facebook User ID. If user registration is disabled no account will be created and an error will be raised. The new Joomla! user will have a username derived from the Facebook login, the same email address as the Facebook account and a long, random password (which the user can change once they have logged in). Set this to No to prevent creation of user accounts through Facebook login."
 
+PLG_SOCIALLOGIN_FACEBOOK_FIELD_FORCENEW_LABEL="Ignore Joomla! setting for creating user accounts"
+PLG_SOCIALLOGIN_FACEBOOK_FIELD_FORCENEW_DESC="When both this option and the 'Create new user accounts' option above are enabled a new user will always be created, even if you have disabled user registration in the options of Joomla's Users page. This is useful to prevent anyone from registering to your site <em>unless</em> they have a Facebook account."
+
 PLG_SOCIALLOGIN_FACEBOOK_FIELD_BYPASSVALIDATION_LABEL="Bypass user validation for verified Facebook users"
 PLG_SOCIALLOGIN_FACEBOOK_FIELD_BYPASSVALIDATION_DESC="Only applies when creating new user accounts. If the Facebook user trying to login is verified (Facebook has checked the validity of their email address OR phone number) the new user will be created active, without going through the Joomla! user account validation. This means that no account activation email will be sent to the user or the administrators of the Joomla! site."
-
 
 PLG_SOCIALLOGIN_FACEBOOK_ERROR_NOT_LOGGED_IN_FB="You are not logged into Facebook or you didn't grant permissions for this site to log you in through Facebook"
 PLG_SOCIALLOGIN_FACEBOOK_ERROR_ACCOUNT_DISABLED_OR_NOT_ACTIVATED="Your account on this site is disabled or not activated."
