Login / link / unlink button colors
With inline head CSS and the ability to disable this feature.

--- a/plugins/sociallogin/facebook/language/en-GB/en-GB.plg_sociallogin_facebook.ini
+++ b/plugins/sociallogin/facebook/language/en-GB/en-GB.plg_sociallogin_facebook.ini
@@ -32,6 +32,9 @@ PLG_SOCIALLOGIN_FACEBOOK_FIELD_FORCENEW_DESC="When both this option and the 'Cre
 PLG_SOCIALLOGIN_FACEBOOK_FIELD_BYPASSVALIDATION_LABEL="Bypass user validation for verified Facebook users"
 PLG_SOCIALLOGIN_FACEBOOK_FIELD_BYPASSVALIDATION_DESC="Only applies when creating new user accounts. If the Facebook user trying to login is verified (Facebook has checked the validity of their email address OR phone number) the new user will be created active, without going through the Joomla! user account validation. This means that no account activation email will be sent to the user or the administrators of the Joomla! site."
 
+PLG_SOCIALLOGIN_FACEBOOK_FIELD_CUSTOMCSS_LABEL="Button styling"
+PLG_SOCIALLOGIN_FACEBOOK_FIELD_CUSTOMCSS_DESC="When enabled custom CSS for login, link and unlink button styling will be output to the page header. Disable this option if you intend to use your own CSS to style the buttons."
+
 PLG_SOCIALLOGIN_FACEBOOK_ERROR_NOT_LOGGED_IN_FB="You are not logged into Facebook or you didn't grant permissions for this site to log you in through Facebook"
 PLG_SOCIALLOGIN_FACEBOOK_ERROR_ACCOUNT_DISABLED_OR_NOT_ACTIVATED="Your account on this site is disabled or not activated."
 PLG_SOCIALLOGIN_FACEBOOK_ERROR_LOCAL_NOT_FOUND="You do not have an account on this site that corresponds to this Facebook account."
