--- a/plugins/sociallogin/facebook/language/en-GB/en-GB.plg_sociallogin_facebook.ini
+++ b/plugins/sociallogin/facebook/language/en-GB/en-GB.plg_sociallogin_facebook.ini
@@ -5,7 +5,7 @@
 PLG_SOCIALLOGIN_FACEBOOK="Akeeba Social Login - Facebook integration"
 PLG_SOCIALLOGIN_FACEBOOK_DESCRIPTION="Allows social login with Facebook accounts."
 
-PLG_SOCIALLOGIN_FACEBOOK_LOGIN_LABEL="Facebook"
+PLG_SOCIALLOGIN_FACEBOOK_LOGIN_LABEL="Login with Facebook"
 PLG_SOCIALLOGIN_FACEBOOK_LOGIN_DESC="Login with your Facebook account. A new account will be created if no matching account exists on our site."
 
 PLG_SOCIALLOGIN_FACEBOOK_LINK_LABEL="Link Facebook"
@@ -34,6 +34,9 @@ PLG_SOCIALLOGIN_FACEBOOK_FIELD_BYPASSVALIDATION_DESC="Only applies when creating
 
 PLG_SOCIALLOGIN_FACEBOOK_FIELD_CUSTOMCSS_LABEL="Button styling"
 PLG_SOCIALLOGIN_FACEBOOK_FIELD_CUSTOMCSS_DESC="When enabled custom CSS for login, link and unlink button styling will be output to the page header. Disable this option if you intend to use your own CSS to style the buttons."
+
+PLG_SOCIALLOGIN_FACEBOOK_FIELD_ICONCLASS_LABEL="Icon class"
+PLG_SOCIALLOGIN_FACEBOOK_FIELD_ICONCLASS_DESC="The icon CSS class to use in the login, link and unlink buttons. Useful to use an icon font such as FontAwesome or Glyphicons to render the logo. If it's left empty a transparent PNG image will be used instead - but it's slower to load!"
 
 PLG_SOCIALLOGIN_FACEBOOK_ERROR_NOT_LOGGED_IN_FB="You are not logged into Facebook or you didn't grant permissions for this site to log you in through Facebook"
 PLG_SOCIALLOGIN_FACEBOOK_ERROR_ACCOUNT_DISABLED_OR_NOT_ACTIVATED="Your account on this site is disabled or not activated."
