--- a/plugins/system/sociallogin/language/en-GB/en-GB.plg_system_sociallogin.sys.ini
+++ b/plugins/system/sociallogin/language/en-GB/en-GB.plg_system_sociallogin.sys.ini
@@ -5,8 +5,11 @@
 PLG_SYSTEM_SOCIALLOGIN="System - Akeeba Social Login"
 PLG_SYSTEM_SOCIALLOGIN_DESCRIPTION="Displays the social network login buttons. Use the options to tell this plugin where it should auto-append the social login buttons or use template overrides according to the documentation."
 
-PLG_SYSTEM_SOCIALLOGIN_CONFIG_LOGINMODULES_LABEL="Login Modules' Names"
-PLG_SYSTEM_SOCIALLOGIN_CONFIG_LOGINMODULES_DESC="Enter the comma separated list of namen of modules to append the social buttons automatically, e.g. <code>mod_login, mod_ajaxlogin</code>. Set this to <code>none</code> to prevent this behavior. In this case you must make template overrides according to the documentation."
+PLG_SYSTEM_SOCIALLOGIN_CONFIG_LOGINMODULES_LABEL="Frontend Login Modules' Names"
+PLG_SYSTEM_SOCIALLOGIN_CONFIG_LOGINMODULES_DESC="Enter the comma separated list of names of frontend modules. The social buttons will be appended to them automatically, e.g. <code>mod_login, mod_ajaxlogin</code>. Set this to <code>none</code> to prevent this behavior. In this case you must make template overrides according to the documentation."
+
+PLG_SYSTEM_SOCIALLOGIN_CONFIG_BACKENDLOGINMODULES_LABEL="Backend Login Modules' Names"
+PLG_SYSTEM_SOCIALLOGIN_CONFIG_BACKENDLOGINMODULES_DESC="Enter the comma separated list of names of backend modules. The social buttons will be appended to them automatically, e.g. <code>mod_login, mod_ajaxlogin</code>. Set this to <code>none</code> to prevent this behavior. In this case you must make template overrides according to the documentation."
 
 PLG_SYSTEM_SOCIALLOGIN_CONFIG_INTERCEPTLOGIN_LABEL="Add buttons to login page"
 PLG_SYSTEM_SOCIALLOGIN_CONFIG_INTERCEPTLOGIN_DESC="When enabled the plugin will automatically append the social login buttons to the end of the login page created by Joomla's com_users. Otherwise you must make template overrides according to the documentation."
