* Social Login buttons can now be relocated next to the Login button in the login module using a bit of Javascript magic

--- a/translations/plugins/system/sociallogin/en-GB/en-GB.plg_system_sociallogin.sys.ini
+++ b/translations/plugins/system/sociallogin/en-GB/en-GB.plg_system_sociallogin.sys.ini
@@ -11,8 +11,18 @@ PLG_SYSTEM_SOCIALLOGIN_CONFIG_LOGINMODULES_DESC="Enter the comma separated list 
 PLG_SYSTEM_SOCIALLOGIN_CONFIG_BACKENDLOGINMODULES_LABEL="Backend Login Modules' Names"
 PLG_SYSTEM_SOCIALLOGIN_CONFIG_BACKENDLOGINMODULES_DESC="Enter the comma separated list of names of backend modules. The social buttons will be appended to them automatically, e.g. <code>mod_login, mod_ajaxlogin</code>. Set this to <code>none</code> to prevent this behavior. In this case you must make template overrides according to the documentation."
 
+PLG_SYSTEM_SOCIALLOGIN_CONFIG_RELOCATE_LABEL="Social Login button placement"
+PLG_SYSTEM_SOCIALLOGIN_CONFIG_RELOCATE_OPT_NEXTTOLOGIN="Next to Login button"
+PLG_SYSTEM_SOCIALLOGIN_CONFIG_RELOCATE_OPT_ENDOFMODULE="End of module content"
+PLG_SYSTEM_SOCIALLOGIN_CONFIG_RELOCATE_DESC="The various Joomla login modules, including Joomla's own, do not offer a way to place additional buttons next to the Login button. If you use the 'Next to Login button' option Akeeba Social Login will use Javascript to move its login buttons next to what is <i>possibly</i> the Login action button of the module. If that fails, or if you use the 'End of module content' option, the Social Login buttons will be placed at the end of the module's content."
+
 PLG_SYSTEM_SOCIALLOGIN_CONFIG_INTERCEPTLOGIN_LABEL="Add buttons to login page"
 PLG_SYSTEM_SOCIALLOGIN_CONFIG_INTERCEPTLOGIN_DESC="When enabled the plugin will automatically append the social login buttons to the end of the login page created by Joomla's com_users. Otherwise you must make template overrides according to the documentation."
 
 PLG_SYSTEM_SOCIALLOGIN_CONFIG_LINKUNLINKBUTTONS_LABEL="Add buttons to user account page"
 PLG_SYSTEM_SOCIALLOGIN_CONFIG_LINKUNLINKBUTTONS_DESC="When enabled the plugin will automatically add a social media section in the Edit User Account page of Joomla's com_users. This lets users link or unlink their account to their social media presence. If disabled you will have to make template overrides according to the documentation."
+
+COM_PLUGINS_SOCIALLOGIN_EXPERT_FIELDSET_LABEL="Expert Settings"
+
+PLG_SYSTEM_SOCIALLOGIN_CONFIG_RELOCATESELECTORS_LABEL="CSS Selectors for button placement"
+PLG_SYSTEM_SOCIALLOGIN_CONFIG_RELOCATESELECTORS_DESC="Used with the 'Next to Login button' option in the Basic section. Comma- or newline-separated list of CSS selectors to locate the Login button inside the Login module. The default selectors should work with most login modules."
