Dynamic user group assignment
Dynamic user group assignments

gh-46

--- a/translations/plugins/system/sociallogin/en-GB/en-GB.plg_system_sociallogin.sys.ini
+++ b/translations/plugins/system/sociallogin/en-GB/en-GB.plg_system_sociallogin.sys.ini
@@ -27,6 +27,8 @@ COM_PLUGINS_SOCIALLOGIN_EXPERT_FIELDSET_LABEL="Expert Settings"
 PLG_SYSTEM_SOCIALLOGIN_CONFIG_RELOCATESELECTORS_LABEL="CSS Selectors for button placement"
 PLG_SYSTEM_SOCIALLOGIN_CONFIG_RELOCATESELECTORS_DESC="Used with the 'Next to Login button' option in the Basic section. Comma- or newline-separated list of CSS selectors to locate the Login button inside the Login module. The default selectors should work with most login modules."
 
+COM_PLUGINS_SOCIALLOGIN_USERGROUPS_FIELDSET_LABEL="User groups"
+
 PLG_SYSTEM_SOCIALLOGIN_LINKEDACCOUNTUSERGROUP_TITLE="User Group when social network account is linked"
 PLG_SYSTEM_SOCIALLOGIN_LINKEDACCOUNTUSERGROUP_DESC="Add the user to this Joomla User Group <em>dynamically</em> when they have linked their Joomla user profile with a social network account. The user group assignment is only valid throughout the login session and is NOT stored in the database."
 
