Dynamic user group assignment
Anti-nuissance user profile field

Closes gh-46

--- a/translations/plugins/system/sociallogin/en-GB/en-GB.plg_system_sociallogin.ini
+++ b/translations/plugins/system/sociallogin/en-GB/en-GB.plg_system_sociallogin.ini
@@ -14,3 +14,6 @@ PLG_SYSTEM_SOCIALLOGIN_ERR_NOUSER="Cannot configure social login for non-existen
 PLG_SYSTEM_SOCIALLOGIN_HEADER="Social Login"
 PLG_SYSTEM_SOCIALLOGIN_FIELD_LABEL="Social Login setup"
 PLG_SYSTEM_SOCIALLOGIN_FIELD_DESC="Set up social login to log in to our site more easily. WARNING! Modifying your social login settings will lose any other changes you've made in your user account settings."
+
+PLG_SYSTEM_SOCIALLOGIN_FIELD_DONTREMIND_LABEL="Don't remind me to link my social media profiles"
+PLG_SYSTEM_SOCIALLOGIN_FIELD_DONTREMIND_DESC="Set this to Yes to avoid receiving notifications about linking your social media profiles to your account on this site."
