--- a/translations/plugins/system/sociallogin/en-GB/en-GB.plg_system_sociallogin.sys.ini
+++ b/translations/plugins/system/sociallogin/en-GB/en-GB.plg_system_sociallogin.sys.ini
@@ -22,6 +22,9 @@ PLG_SYSTEM_SOCIALLOGIN_CONFIG_INTERCEPTLOGIN_DESC="When enabled the plugin will 
 PLG_SYSTEM_SOCIALLOGIN_CONFIG_LINKUNLINKBUTTONS_LABEL="Add buttons to user account page"
 PLG_SYSTEM_SOCIALLOGIN_CONFIG_LINKUNLINKBUTTONS_DESC="When enabled the plugin will automatically add a social media section in the Edit User Account page of Joomla's com_users. This lets users link or unlink their account to their social media presence. If disabled you will have to make template overrides according to the documentation."
 
+PLG_SYSTEM_SOCIALLOGIN_CONFIG_SHOW_DONTREMIND_LABEL="Show the don't remind field in the user account page"
+PLG_SYSTEM_SOCIALLOGIN_CONFIG_SHOW_DONTREMIND_DESC="When both this and the previous option are enabled the plugin will add a “Don't remind me to link my social media profiles” field in the user profile. If the user set this to Yes the plugin will NOT assign this user to any user groups, despite your settings in the “User groups” section of this plugin's configuration."
+
 COM_PLUGINS_SOCIALLOGIN_EXPERT_FIELDSET_LABEL="Expert Settings"
 
 PLG_SYSTEM_SOCIALLOGIN_CONFIG_RELOCATESELECTORS_LABEL="CSS Selectors for button placement"
