--- a/translations/plugins/sociallogin/google/en-GB/en-GB.plg_sociallogin_google.sys.ini
+++ b/translations/plugins/sociallogin/google/en-GB/en-GB.plg_sociallogin_google.sys.ini
@@ -1,6 +1,6 @@
-;; Akeeba Social Login - A social login solution for Joomla!
-;; Copyright (c)2016-2019 Nicholas K. Dionysopoulos / Akeeba Ltd
-;; Licensed under the terms of the GNU General Public License v3 or later
+;; @package   AkeebaSocialLogin
+;; @copyright Copyright (c)2016-2020 Nicholas K. Dionysopoulos / Akeeba Ltd
+;; @license   GNU General Public License version 3, or later
 
 PLG_SOCIALLOGIN_GOOGLE="Akeeba Social Login - Google integration"
 PLG_SOCIALLOGIN_GOOGLE_DESCRIPTION="Allows social login with Google accounts."
