--- a/translations/plugins/sociallogin/linkedin/en-GB/en-GB.plg_sociallogin_linkedin.sys.ini
+++ b/translations/plugins/sociallogin/linkedin/en-GB/en-GB.plg_sociallogin_linkedin.sys.ini
@@ -1,6 +1,6 @@
-;; Akeeba Social Login - A social login solution for Joomla!
-;; Copyright (c)2016-2019 Nicholas K. Dionysopoulos / Akeeba Ltd
-;; Licensed under the terms of the GNU General Public License v3 or later
+;; @package   AkeebaSocialLogin
+;; @copyright Copyright (c)2016-2020 Nicholas K. Dionysopoulos / Akeeba Ltd
+;; @license   GNU General Public License version 3, or later
 
 PLG_SOCIALLOGIN_LINKEDIN="Akeeba Social Login - LinkedIn integration"
 PLG_SOCIALLOGIN_LINKEDIN_DESCRIPTION="Allows social login with LinkedIn accounts."
