--- a/translations/plugins/system/sociallogin/en-GB/en-GB.plg_system_sociallogin.sys.ini
+++ b/translations/plugins/system/sociallogin/en-GB/en-GB.plg_system_sociallogin.sys.ini
@@ -1,6 +1,6 @@
-;; Akeeba Social Login - A social login solution for Joomla!
-;; Copyright (c)2016-2019 Nicholas K. Dionysopoulos / Akeeba Ltd
-;; Licensed under the terms of the GNU General Public License v3 or later
+;; @package   AkeebaSocialLogin
+;; @copyright Copyright (c)2016-2020 Nicholas K. Dionysopoulos / Akeeba Ltd
+;; @license   GNU General Public License version 3, or later
 
 PLG_SYSTEM_SOCIALLOGIN="System - Akeeba Social Login"
 PLG_SYSTEM_SOCIALLOGIN_DESCRIPTION="Displays the social network login buttons. Use the options to tell this plugin where it should auto-append the social login buttons or use template overrides according to the documentation."
