--- a/translations/plugins/sociallogin/microsoft/en-GB/en-GB.plg_sociallogin_microsoft.ini
+++ b/translations/plugins/sociallogin/microsoft/en-GB/en-GB.plg_sociallogin_microsoft.ini
@@ -5,13 +5,13 @@
 PLG_SOCIALLOGIN_MICROSOFT="Akeeba Social Login - Microsoft Account integration"
 PLG_SOCIALLOGIN_MICROSOFT_DESCRIPTION="Allows social login with Microsoft Account accounts."
 
-PLG_SOCIALLOGIN_MICROSOFT_LOGIN_LABEL="<small>Login</small>"
+PLG_SOCIALLOGIN_MICROSOFT_LOGIN_LABEL="<small>Login with</small> Microsoft"
 PLG_SOCIALLOGIN_MICROSOFT_LOGIN_DESC="Login with your Microsoft Account. A new account will be created if no matching account exists on our site."
 
-PLG_SOCIALLOGIN_MICROSOFT_LINK_LABEL="Link"
+PLG_SOCIALLOGIN_MICROSOFT_LINK_LABEL="Link Microsoft Account"
 PLG_SOCIALLOGIN_MICROSOFT_LINK_DESC="Links your user on this site from your Microsoft Account. You can then use your Microsoft Account to log in to this site."
 
-PLG_SOCIALLOGIN_MICROSOFT_UNLINK_LABEL="Unlink"
+PLG_SOCIALLOGIN_MICROSOFT_UNLINK_LABEL="Unlink Microsoft Account"
 PLG_SOCIALLOGIN_MICROSOFT_UNLINK_DESC="Unlinks your user on this site from your Microsoft Account"
 
 PLG_SOCIALLOGIN_MICROSOFT_FIELD_APPID_LABEL="Microsoft Live SDK App Client ID"
