--- a/plugins/sociallogin/facebook/language/en-GB/en-GB.plg_sociallogin_facebook.ini
+++ b/plugins/sociallogin/facebook/language/en-GB/en-GB.plg_sociallogin_facebook.ini
@@ -9,7 +9,7 @@ PLG_SOCIALLOGIN_FACEBOOK_LOGIN_LABEL="<small>Login with</small> Facebook"
 PLG_SOCIALLOGIN_FACEBOOK_LOGIN_DESC="Login with your Facebook account. A new account will be created if no matching account exists on our site."
 
 PLG_SOCIALLOGIN_FACEBOOK_LINK_LABEL="Link Facebook"
-PLG_SOCIALLOGIN_FACEBOOK_LINK_DESC="Links your user on this site from your Facebook account. You can then use your Facebook account to log in to this site."
+PLG_SOCIALLOGIN_FACEBOOK_LINK_DESC="Links your user on this site with your Facebook account. You can then use your Facebook account to log in to this site."
 
 PLG_SOCIALLOGIN_FACEBOOK_UNLINK_LABEL="Unlink Facebook"
 PLG_SOCIALLOGIN_FACEBOOK_UNLINK_DESC="Unlinks your user on this site from your Facebook account"
