Implement Login with Apple gh-49
Button styling

--- a/plugins/sociallogin/apple/language/en-GB/en-GB.plg_sociallogin_apple.ini
+++ b/plugins/sociallogin/apple/language/en-GB/en-GB.plg_sociallogin_apple.ini
@@ -2,7 +2,7 @@
 ;; @copyright Copyright (c)2016-2020 Nicholas K. Dionysopoulos / Akeeba Ltd
 ;; @license   GNU General Public License version 3, or later
 
-PLG_SOCIALLOGIN_APPLE_LOGIN_LABEL="<small>Log-in with</small> Apple"
+PLG_SOCIALLOGIN_APPLE_LOGIN_LABEL="<small>Login with</small> Apple"
 PLG_SOCIALLOGIN_APPLE_LOGIN_DESC="Login with your Apple ID. A new account will be created if no matching account exists on our site."
 
 PLG_SOCIALLOGIN_APPLE_LINK_LABEL="Link Apple"
