Implement Login with Apple gh-49
First working draft

--- a/plugins/sociallogin/apple/language/en-GB/en-GB.plg_sociallogin_apple.ini
+++ b/plugins/sociallogin/apple/language/en-GB/en-GB.plg_sociallogin_apple.ini
@@ -11,11 +11,17 @@ PLG_SOCIALLOGIN_APPLE_LINK_DESC="Links your user on this site with your Apple ID
 PLG_SOCIALLOGIN_APPLE_UNLINK_LABEL="Unlink Apple"
 PLG_SOCIALLOGIN_APPLE_UNLINK_DESC="Unlinks your user on this site from your Apple ID"
 
-PLG_SOCIALLOGIN_APPLE_FIELD_CLIENTID_LABEL="Client ID"
-PLG_SOCIALLOGIN_APPLE_FIELD_CLIENTID_DESC=""
+PLG_SOCIALLOGIN_APPLE_FIELD_CLIENTID_LABEL="Client ID (Services ID)"
+PLG_SOCIALLOGIN_APPLE_FIELD_CLIENTID_DESC="Enter the Services ID you created in your Apple Developer account."
 
-PLG_SOCIALLOGIN_APPLE_FIELD_CLIENTSECRET_LABEL="Client Secret"
-PLG_SOCIALLOGIN_APPLE_FIELD_CLIENTSECRET_DESC=""
+PLG_SOCIALLOGIN_APPLE_FIELD_TEAMID_LABEL="Team ID"
+PLG_SOCIALLOGIN_APPLE_FIELD_TEAMID_DESC="Enter the Team ID for your Apple Developer account."
+
+PLG_SOCIALLOGIN_APPLE_FIELD_KEYID_LABEL="Key ID"
+PLG_SOCIALLOGIN_APPLE_FIELD_KEYID_DESC="Enter the Key ID you created for the Services ID entered below in your Apple Developer account."
+
+PLG_SOCIALLOGIN_APPLE_FIELD_KEYMATERIAL_LABEL="Secret Key"
+PLG_SOCIALLOGIN_APPLE_FIELD_KEYMATERIAL_DESC="Enter the Secret Key file contents which corresponds to the Key ID above. When you created a Secret Key on the Apple Developer account site you downloaded a file with a name similar to <code>AuthKey_ABCDEF01234.p8</code>. This is a text file. Open it with a text editor such as TextEdit, copy its contents and paste them here."
 
 PLG_SOCIALLOGIN_APPLE_FIELD_CREATENEW_LABEL="Create new user accounts"
 PLG_SOCIALLOGIN_APPLE_FIELD_CREATENEW_DESC="Creates a new Joomla! user when a user tries to log in via Apple ID but there is no Joomla! user account associated with that Apple ID. If user registration is disabled no account will be created and an error will be raised. The new Joomla! user will have a random username, the same email address as the one returned by Apple (might be a proxy email address) and a long, random password (which the user can change once they have logged in). Set this to No to prevent creation of user accounts through Apple login."
@@ -31,3 +37,11 @@ PLG_SOCIALLOGIN_APPLE_FIELD_CUSTOMCSS_DESC="When enabled custom CSS for login, l
 
 PLG_SOCIALLOGIN_APPLE_FIELD_ICONCLASS_LABEL="Icon class"
 PLG_SOCIALLOGIN_APPLE_FIELD_ICONCLASS_DESC="The icon CSS class to use in the login, link and unlink buttons. Useful to use an icon font such as FontAwesome or Glyphicons to render the logo. If it's left empty a transparent PNG image will be used instead - but it's slower to load!"
+
+PLG_SOCIALLOGIN_APPLE_ERROR_ACCOUNT_DISABLED_OR_NOT_ACTIVATED="Your account on this site is disabled or not activated."
+PLG_SOCIALLOGIN_APPLE_ERROR_LOCAL_NOT_FOUND="You do not have an account on this site that corresponds to this Apple ID."
+PLG_SOCIALLOGIN_APPLE_ERROR_LOCAL_USERNAME_CONFLICT="An account with the same username or email address as your Apple ID account already exists on this site. Please log in to your account on this site and then link your Apple ID to it. If you do not remember having a user account yet please create a new one first."
+PLG_SOCIALLOGIN_APPLE_ERROR_CANNOT_CREATE="Could not create a new user on our site: %s"
+
+PLG_SOCIALLOGIN_APPLE_NOTICE_USERACTIVATE="Your email address needs to be verified before logging in to this site. An email has been sent to you with instructions. After following these instructions please come back here and retry logging in to this site using Apple."
+PLG_SOCIALLOGIN_APPLE_NOTICE_ADMINACTIVATE="Your account needs to be reviewed by an administrator. When the review process is complete you will receive a confirmation email. After receiving that email please come back here and retry logging in to this site using Apple."
