--- a/plugins/sociallogin/apple/language/en-GB/en-GB.plg_sociallogin_apple.ini
+++ b/plugins/sociallogin/apple/language/en-GB/en-GB.plg_sociallogin_apple.ini
@@ -23,6 +23,9 @@ PLG_SOCIALLOGIN_APPLE_FIELD_KEYID_DESC="Enter the Key ID you created for the Ser
 PLG_SOCIALLOGIN_APPLE_FIELD_KEYMATERIAL_LABEL="Secret Key"
 PLG_SOCIALLOGIN_APPLE_FIELD_KEYMATERIAL_DESC="Enter the Secret Key file contents which corresponds to the Key ID above. When you created a Secret Key on the Apple Developer account site you downloaded a file with a name similar to <code>AuthKey_ABCDEF01234.p8</code>. This is a text file. Open it with a text editor such as TextEdit, copy its contents and paste them here."
 
+PLG_SOCIALLOGIN_APPLE_FIELD_LOGINUNLINKED_LABEL="Allow social login to non-linked accounts"
+PLG_SOCIALLOGIN_APPLE_FIELD_LOGINUNLINKED_DESC="When enabled allows users to log in despite not having linked their Apple ID to their site user account. They must choose to share their real email address when signing in with Apple and their account's email address must be the same as the email account they shared with your site when signing in with Apple."
+
 PLG_SOCIALLOGIN_APPLE_FIELD_CREATENEW_LABEL="Create new user accounts"
 PLG_SOCIALLOGIN_APPLE_FIELD_CREATENEW_DESC="Creates a new Joomla! user when a user tries to log in via Apple ID but there is no Joomla! user account associated with that Apple ID. If user registration is disabled no account will be created and an error will be raised. The new Joomla! user will have a random username, the same email address as the one returned by Apple (might be a proxy email address) and a long, random password (which the user can change once they have logged in). Set this to No to prevent creation of user accounts through Apple login."
 
