Implement Login with Apple gh-49
Use the Apple-prescribed image by default

--- a/plugins/sociallogin/apple/language/en-GB/en-GB.plg_sociallogin_apple.ini
+++ b/plugins/sociallogin/apple/language/en-GB/en-GB.plg_sociallogin_apple.ini
@@ -35,11 +35,14 @@ PLG_SOCIALLOGIN_APPLE_FIELD_FORCENEW_DESC="When both this option and the 'Create
 PLG_SOCIALLOGIN_APPLE_FIELD_BYPASSVALIDATION_LABEL="Bypass user validation for Apple users"
 PLG_SOCIALLOGIN_APPLE_FIELD_BYPASSVALIDATION_DESC="Only applies when creating new user accounts. If Apple says that the user trying to login is most likely a real human (based on their own, opaque heuristics) the new user will be created active, without going through the Joomla! user account validation. This means that no account activation email will be sent to the user or the administrators of the Joomla! site."
 
+PLG_SOCIALLOGIN_APPLE_FIELD_IMAGEBUTTON_LABEL="Use image button"
+PLG_SOCIALLOGIN_APPLE_FIELD_IMAGEBUTTON_DESC="Set to Yes to use the Apple-prescribed image to display the login button. Do note that disabling this option may violate the Terms of Service for Sign In with Apple."
+
 PLG_SOCIALLOGIN_APPLE_FIELD_CUSTOMCSS_LABEL="Button styling"
 PLG_SOCIALLOGIN_APPLE_FIELD_CUSTOMCSS_DESC="When enabled custom CSS for login, link and unlink button styling will be output to the page header. Disable this option if you intend to use your own CSS to style the buttons."
 
 PLG_SOCIALLOGIN_APPLE_FIELD_ICONCLASS_LABEL="Icon class"
-PLG_SOCIALLOGIN_APPLE_FIELD_ICONCLASS_DESC="The icon CSS class to use in the login, link and unlink buttons. Useful to use an icon font such as FontAwesome or Glyphicons to render the logo. If it's left empty a transparent PNG image will be used instead - but it's slower to load!"
+PLG_SOCIALLOGIN_APPLE_FIELD_ICONCLASS_DESC="The icon CSS class to use in the login (if “Use image button” is set to No), link and unlink buttons. Useful to use an icon font such as FontAwesome or Glyphicons to render the logo. If it's left empty a transparent PNG image will be used instead - but it's slower to load!"
 
 PLG_SOCIALLOGIN_APPLE_ERROR_ACCOUNT_DISABLED_OR_NOT_ACTIVATED="Your account on this site is disabled or not activated."
 PLG_SOCIALLOGIN_APPLE_ERROR_LOCAL_NOT_FOUND="You do not have an account on this site that corresponds to this Apple ID."
