~ Better follow branding guidelines for the various third party services

--- a/plugins/sociallogin/facebook/language/en-GB/en-GB.plg_sociallogin_facebook.ini
+++ b/plugins/sociallogin/facebook/language/en-GB/en-GB.plg_sociallogin_facebook.ini
@@ -5,7 +5,7 @@
 PLG_SOCIALLOGIN_FACEBOOK="Akeeba Social Login - Facebook integration"
 PLG_SOCIALLOGIN_FACEBOOK_DESCRIPTION="Allows social login with Facebook accounts."
 
-PLG_SOCIALLOGIN_FACEBOOK_LOGIN_LABEL="<small>Login with</small> Facebook"
+PLG_SOCIALLOGIN_FACEBOOK_LOGIN_LABEL="Login with Facebook"
 PLG_SOCIALLOGIN_FACEBOOK_LOGIN_DESC="Login with your Facebook account. A new account will be created if no matching account exists on our site."
 
 PLG_SOCIALLOGIN_FACEBOOK_LINK_LABEL="Link Facebook"
