--- a/plugins/sociallogin/github/language/en-GB/en-GB.plg_sociallogin_github.ini
+++ b/plugins/sociallogin/github/language/en-GB/en-GB.plg_sociallogin_github.ini
@@ -5,7 +5,7 @@
 PLG_SOCIALLOGIN_GITHUB="Akeeba Social Login - GitHub integration"
 PLG_SOCIALLOGIN_GITHUB_DESCRIPTION="Allows social login with GitHub accounts."
 
-PLG_SOCIALLOGIN_GITHUB_LOGIN_LABEL="<small>Login with</small> GitHub"
+PLG_SOCIALLOGIN_GITHUB_LOGIN_LABEL="Login with GitHub"
 PLG_SOCIALLOGIN_GITHUB_LOGIN_DESC="Login with your GitHub account. A new account will be created if no matching account exists on our site."
 
 PLG_SOCIALLOGIN_GITHUB_LINK_LABEL="Link GitHub"
