--- a/plugins/sociallogin/google/language/en-GB/en-GB.plg_sociallogin_google.ini
+++ b/plugins/sociallogin/google/language/en-GB/en-GB.plg_sociallogin_google.ini
@@ -5,7 +5,7 @@
 PLG_SOCIALLOGIN_GOOGLE="Akeeba Social Login - Google integration"
 PLG_SOCIALLOGIN_GOOGLE_DESCRIPTION="Allows social login with Google accounts."
 
-PLG_SOCIALLOGIN_GOOGLE_LOGIN_LABEL="<small>Login with</small> Google"
+PLG_SOCIALLOGIN_GOOGLE_LOGIN_LABEL="Sign in with Google"
 PLG_SOCIALLOGIN_GOOGLE_LOGIN_DESC="Login with your Google account. A new account will be created if no matching account exists on our site."
 
 PLG_SOCIALLOGIN_GOOGLE_LINK_LABEL="Link Google"
