--- a/plugins/sociallogin/twitter/language/en-GB/en-GB.plg_sociallogin_twitter.ini
+++ b/plugins/sociallogin/twitter/language/en-GB/en-GB.plg_sociallogin_twitter.ini
@@ -5,7 +5,7 @@
 PLG_SOCIALLOGIN_TWITTER="Akeeba Social Login - Twitter integration"
 PLG_SOCIALLOGIN_TWITTER_DESCRIPTION="Allows social login with Twitter accounts."
 
-PLG_SOCIALLOGIN_TWITTER_LOGIN_LABEL="<small>Login with</small> Twitter"
+PLG_SOCIALLOGIN_TWITTER_LOGIN_LABEL="Sign in with Twitter"
 PLG_SOCIALLOGIN_TWITTER_LOGIN_DESC="Login with your Twitter account. A new account will be created if no matching account exists on our site."
 
 PLG_SOCIALLOGIN_TWITTER_LINK_LABEL="Link Twitter"
