--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,7 @@
 Akeeba SocialLogin 3.2.0
 ================================================================================
 + Now supports Sign In with Apple
+~ Better follow branding guidelines for the various third party services
 
 Akeeba SocialLogin 3.1.1
 ================================================================================
