--- a/plugins/sociallogin/linkedin/language/en-GB/en-GB.plg_sociallogin_linkedin.ini
+++ b/plugins/sociallogin/linkedin/language/en-GB/en-GB.plg_sociallogin_linkedin.ini
@@ -5,7 +5,7 @@
 PLG_SOCIALLOGIN_LINKEDIN="Akeeba Social Login - LinkedIn integration"
 PLG_SOCIALLOGIN_LINKEDIN_DESCRIPTION="Allows social login with LinkedIn accounts."
 
-PLG_SOCIALLOGIN_LINKEDIN_LOGIN_LABEL="<small>Login with</small> LinkedIn"
+PLG_SOCIALLOGIN_LINKEDIN_LOGIN_LABEL="Sign in with LinkedIn"
 PLG_SOCIALLOGIN_LINKEDIN_LOGIN_DESC="Login with your LinkedIn account. A new account will be created if no matching account exists on our site."
 
 PLG_SOCIALLOGIN_LINKEDIN_LINK_LABEL="Link LinkedIn"
@@ -31,6 +31,9 @@ PLG_SOCIALLOGIN_LINKEDIN_FIELD_FORCENEW_DESC="When both this option and the 'Cre
 
 PLG_SOCIALLOGIN_LINKEDIN_FIELD_BYPASSVALIDATION_LABEL="Bypass user validation for LinkedIn users"
 PLG_SOCIALLOGIN_LINKEDIN_FIELD_BYPASSVALIDATION_DESC="Only applies when creating new user accounts. When this option is enabled, the new Joomla! user will be created active, without going through the Joomla! user account validation. This means that no account activation email will be sent to the user or the administrators of the Joomla! site. This is safe because LinkedIn only allows users with a verified email address to hold a LinkedIn account."
+
+PLG_SOCIALLOGIN_LINKEDIN_FIELD_IMAGEBUTTON_LABEL="Use image button"
+PLG_SOCIALLOGIN_LINKEDIN_FIELD_IMAGEBUTTON_DESC="Set to Yes to use the LinkedIn-prescribed image to display the login button. Do note that disabling this option may violate the Terms of Service for Sign In with LinkedIn."
 
 PLG_SOCIALLOGIN_LINKEDIN_FIELD_CUSTOMCSS_LABEL="Button styling"
 PLG_SOCIALLOGIN_LINKEDIN_FIELD_CUSTOMCSS_DESC="When enabled custom CSS for login, link and unlink button styling will be output to the page header. Disable this option if you intend to use your own CSS to style the buttons."
