--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,8 @@
 <?php die(); ?>
+Akeeba SocialLogin 3.2.1
+================================================================================
+# [HIGH] Login with Apple was broken due to a problem in third party Composer dependencies
+
 Akeeba SocialLogin 3.2.0
 ================================================================================
 + Now supports Sign In with Apple
