~ Login with Microsoft: Support Azure AD app registrations on top of the deprecated Windows Live SDK apps.
Close gh-62

--- a/plugins/sociallogin/microsoft/language/en-GB/en-GB.plg_sociallogin_microsoft.ini
+++ b/plugins/sociallogin/microsoft/language/en-GB/en-GB.plg_sociallogin_microsoft.ini
@@ -14,6 +14,21 @@ PLG_SOCIALLOGIN_MICROSOFT_LINK_DESC="Links your user on this site from your Micr
 PLG_SOCIALLOGIN_MICROSOFT_UNLINK_LABEL="Unlink Microsoft Account"
 PLG_SOCIALLOGIN_MICROSOFT_UNLINK_DESC="Unlinks your user on this site from your Microsoft Account"
 
+PLG_SOCIALLOGIN_MICROSOFT_FIELD_APPTYPE_LABEL="Application type"
+PLG_SOCIALLOGIN_MICROSOFT_FIELD_APPTYPE_DESC="Select your Microsoft application type. Live SDK if you used the Microsoft Application Registration Portal, Azure AD if you created an app registration through the Azure Portal. Please consult the documentation."
+
+PLG_SOCIALLOGIN_MICROSOFT_FIELD_APPTYPE_LIVE="Live SDK"
+PLG_SOCIALLOGIN_MICROSOFT_FIELD_APPTYPE_AZURE="Azure AD"
+
+PLG_SOCIALLOGIN_MICROSOFT_FIELD_TENANTID_LABEL="Tenant ID"
+PLG_SOCIALLOGIN_MICROSOFT_FIELD_TENANTID_DESC="The Tenant ID in Azure. Please consult the documentation."
+
+PLG_SOCIALLOGIN_MICROSOFT_FIELD_AZAPPID_LABEL="Client Secret ID"
+PLG_SOCIALLOGIN_MICROSOFT_FIELD_AZAPPID_DESC="The Client Secret ID in Azure, App registrations, your application, Certificates &amp; secrets. Please consult the documentation."
+
+PLG_SOCIALLOGIN_MICROSOFT_FIELD_AZAPPSECRET_LABEL="Client Secret Value"
+PLG_SOCIALLOGIN_MICROSOFT_FIELD_AZAPPSECRET_DESC="The Client Secret Value in Azure, App registrations, your application, Certificates &amp; secrets. Please consult the documentation."
+
 PLG_SOCIALLOGIN_MICROSOFT_FIELD_APPID_LABEL="Microsoft Live SDK App Client ID"
 PLG_SOCIALLOGIN_MICROSOFT_FIELD_APPID_DESC="Enter the Client ID for your Microsoft Live SDK application here. This is required to enable social login with Microsoft Account. You can create a Microsoft Live SDK app through the Microsoft Application Registration Portal."
 
