--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,8 @@
 <?php die(); ?>
+Akeeba SocialLogin 3.2.3
+================================================================================
+~ Login with Microsoft: Support Azure AD app registrations on top of the deprecated Windows Live SDK apps.
+
 Akeeba SocialLogin 3.2.2
 ================================================================================
 # [LOW] PHP notice in the post-installation script (gh-60)
