--- a/plugins/sociallogin/microsoft/language/en-GB/en-GB.plg_sociallogin_microsoft.ini
+++ b/plugins/sociallogin/microsoft/language/en-GB/en-GB.plg_sociallogin_microsoft.ini
@@ -20,14 +20,11 @@ PLG_SOCIALLOGIN_MICROSOFT_FIELD_APPTYPE_DESC="Select your Microsoft application 
 PLG_SOCIALLOGIN_MICROSOFT_FIELD_APPTYPE_LIVE="Live SDK"
 PLG_SOCIALLOGIN_MICROSOFT_FIELD_APPTYPE_AZURE="Azure AD"
 
-PLG_SOCIALLOGIN_MICROSOFT_FIELD_TENANTID_LABEL="Tenant ID"
-PLG_SOCIALLOGIN_MICROSOFT_FIELD_TENANTID_DESC="The Tenant ID in Azure. Please consult the documentation."
-
-PLG_SOCIALLOGIN_MICROSOFT_FIELD_AZAPPID_LABEL="Client Secret ID"
-PLG_SOCIALLOGIN_MICROSOFT_FIELD_AZAPPID_DESC="The Client Secret ID in Azure, App registrations, your application, Certificates &amp; secrets. Please consult the documentation."
+PLG_SOCIALLOGIN_MICROSOFT_FIELD_AZAPPID_LABEL="Application (Client) ID"
+PLG_SOCIALLOGIN_MICROSOFT_FIELD_AZAPPID_DESC="The Application (client) ID in Azure's App Registration, Overview tab."
 
 PLG_SOCIALLOGIN_MICROSOFT_FIELD_AZAPPSECRET_LABEL="Client Secret Value"
-PLG_SOCIALLOGIN_MICROSOFT_FIELD_AZAPPSECRET_DESC="The Client Secret Value in Azure, App registrations, your application, Certificates &amp; secrets. Please consult the documentation."
+PLG_SOCIALLOGIN_MICROSOFT_FIELD_AZAPPSECRET_DESC="The client secret Value in Azure, App registrations, your application, Certificates &amp; secrets. Please consult the documentation."
 
 PLG_SOCIALLOGIN_MICROSOFT_FIELD_APPID_LABEL="Microsoft Live SDK App Client ID"
 PLG_SOCIALLOGIN_MICROSOFT_FIELD_APPID_DESC="Enter the Client ID for your Microsoft Live SDK application here. This is required to enable social login with Microsoft Account. You can create a Microsoft Live SDK app through the Microsoft Application Registration Portal."
